--- a/web/test.xhtml
+++ b/web/test.xhtml
@@ -5,12 +5,30 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      >
+    <h:head>
+        <title>Library Management Login</title>
+    </h:head>
+    <h:body>
+        <h:form>
+        <h:panelGrid columns="3">
+            <h:outputText value="UserID" />
+                <h:inputText id="UserID" required="true" 
+                             value="#{logedInUser.loginid}"
+                             requiredMessage="Please write your user id">
+                </h:inputText>
+            <h:message for="UserID"/>
+            <h:outputText value="Password" />
+            <h:inputText id="pass" required="true" 
+                         value="#{logedInUser.loginpass}"
+                         requiredMessage="Please write your password">
+            </h:inputText>
+            <h:message for="pass"/>
+        </h:panelGrid>
+            <h:commandButton value="Submit" action="#{logedInUser.tryLogin}"/>
+        </h:form>
+    </h:body>
 </html>
