--- a/web/test.xhtml
+++ b/web/test.xhtml
@@ -28,7 +28,7 @@ and open the template in the editor.
             </h:inputText>
             <h:message for="pass"/>
         </h:panelGrid>
-            <h:commandButton value="Submit" action="#{logedInUser.tryLogin()}"/>
+            <h:commandButton value="Submit" action="#{logedInUser.tryLogin}"/>
         </h:form>
     </h:body>
 </html>
