--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -10,7 +10,7 @@
         <h:outputStylesheet name="bootstrap.css" library="css"/>
     </h:head>
     <h:body>
-       
+      <f:event type="preRenderView" listener="#{logedInUser.isLogin}" /> 
         <h1><h:outputLabel>Hello</h:outputLabel></h1>       
         <ul>
             <ui:repeat value="#{bookBean.titles}" var="title">
