--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -29,6 +29,7 @@ and open the template in the editor.
             <h:message for="pass"/>
         </h:panelGrid>
             <h:commandButton value="Submit" action="#{logedInUser.tryLogin}"/>
+            <h:outputLink value="applyAccess.xhtml">Apply For Access</h:outputLink>
         </h:form>
     </h:body>
 </html>
